--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tsparticles/slim": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
