--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "@tsparticles/all": "^3.4.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -22,6 +19,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-typing-effect": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
