--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@tsparticles/react": "^3.0.0",
     "aos": "3.0.0-beta.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
