--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-modal": "^3.16.3",
     "@types/react-typing-effect": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
